libgeopmd/include/geopm_pio.h

/// @brief String size limit for names
///
/// String length allocated for GEOPM names (like signal and control
/// names). Has same value as NAME_MAX from limits.h for historical
/// reasons.
#define GEOPM_NAME_MAX 255ULL
/// @return the number of signal names that can be indexed with the
///         name_idx parameter to the geopm_pio_signal_name()
///         function.  Any error in loading the platform will result
///         in a negative error code describing the failure.
int GEOPM_PUBLIC
    geopm_pio_num_signal_name(void);
/// @param [in] name_idx The value of name_idx must be greater than
///        zero and less than the return value from
///        geopm_pio_num_signal_name() or else an error will occur.
///
/// @param [in] result_max At most result_max bytes are written to the
///        result string. If result_max is too small to contain the
///        signal name an error will occur.
///
/// @param [out] result Sets the result string to the name of the
///        signal indexed by name_idx. Providing a string of GEOPM_NAME_MAX
///        length will be sufficient for storing any result.
///
/// @result Zero is returned on success and
///         a negative error code is returned if any error occurs.
int GEOPM_PUBLIC
    geopm_pio_signal_name(int name_idx, size_t result_max, char *result);
/// @brief Query the domain for the signal with name signal_name.
///
/// @param [in] signal_name A string holding the name of the signal.
///
/// @return one of the geopm_domain_e values signifying the
///         granularity at which the signal is measured.  Will return
///         a negative error code if any error occurs, e.g. a request
///         for a signal_name that is not supported by the platform.
int GEOPM_PUBLIC
    geopm_pio_signal_domain_type(const char *signal_name);
/// @brief Push a signal onto the stack of batch access signals.  The
///        signal is defined by selecting a signal_name from one of
///        the values returned by the geopm_pio_signal_name()
///        function, the domain_type from one of the geopm_domain_e
///        values, and the domain_idx between zero to the value
///        returned by geopm_topo_num_domain(domain_type).
///
/// @details Subsequent calls to the geopm_pio_read_batch() function
///          will read the signal and update the internal state used
///          to store batch signals.  All signals must be pushed onto
///          the stack prior to the first call to
///          geopm_pio_read_batch() or geopm_pio_adjust().  After
///          calls to geopm_pio_read_batch() or geopm_pio_adjust()
///          have been made, signals may be pushed again only after
///          performing a reset by calling geopm_pio_reset() and
///          before calling geopm_pio_read_batch() or
///          geopm_pio_adjust() again.  Attempts to push a signal
///          onto the stack after the first call to
///          geopm_pio_read_batch() or geopm_pio_adjust() (and
///          without performing a reset) or attempts to push a
///          signal_name that is not a value provided by
///          geopm_pio_signal_name() will result in a negative return
///          value.
///
/// @param [in] signal_name The name of the signal, coming from the
///        geopm_pio_signal_name() function.
///
/// @param [in] domain_type The type of the domain from one of the
///        geopm_domain_e values
///
/// @param [in] domain_idx between zero to the value returned by
///        geopm_topo_num_domain(domain_type)
///
/// @return The return value of geopm_pio_push_signal() is an index
///         that can be passed as the sample_idx parameter to
///         geopm_pio_sample() to access the signal value stored in
///         the internal state from the last update.  A distinct
///         signal index will be returned for each unique combination
///         of input parameters.
int GEOPM_PUBLIC
    geopm_pio_push_signal(const char *signal_name, int domain_type, int domain_idx);
/// @brief Samples cached value of a single signal that has been
///        pushed via geopm_pio_push_signal() and writes the value
///        into result.
///
/// @details The cached value is updated at the time of call to
///          geopm_pio_read_batch().
///
/// @param [in] signal_idx The signal_idx provided matches the return
///        value from geopm_pio_push_signal() when the signal was
///        pushed.
///
/// @param [out] result The value of the signal.
///
/// @return If an error occurs then negative error code is returned.
///         Zero is returned upon success.
int GEOPM_PUBLIC
    geopm_pio_sample(int signal_idx, double *result);
/// @brief Read all push signals from the platform so that the next
///        call to geopm_pio_sample() will reflect the updated data.
///
/// @return If an error occurs then negative error code is returned.
///         Zero is returned upon success.
int GEOPM_PUBLIC
    geopm_pio_read_batch(void);
/// @brief C interface to get enums associated with a signal name.
///
/// This interface supports DBus PlatformGetSignalInfo method.  This C
/// interface is implemented using several PlatformIO methods unlike
/// the other wrappers in this header.
///
/// @param [in] signal_name Name of signal to query.
///
/// @param [out] aggregation_type One of the Agg::m_type_e enum values
///        describing the way the signal is aggregated.
///
/// @param [out] format_type One of the geopm::string_format_e enums
///        defined in Helper.hpp that defines how to format the signal
///        as a string.
///
/// @param [out] behavior_type One of the IOGroup::m_signal_behavior_e
///        enum values that describes the signals behavior over time.
///
/// @return Zero on success, error value on failure.
int GEOPM_PUBLIC
    geopm_pio_signal_info(const char *signal_name, int *aggregation_type,
                          int *format_type, int *behavior_type);
struct GEOPM_PUBLIC geopm_request_s {
    int domain_type;
    int domain_idx;
    char name[GEOPM_NAME_MAX];
};