libgeopmd/include/geopm_stats_collector.h

struct geopm_stats_collector_s;
enum geopm_sample_stats_e {
    GEOPM_SAMPLE_TIME_TOTAL,
    GEOPM_SAMPLE_COUNT,
    GEOPM_SAMPLE_PERIOD_MEAN,
    GEOPM_SAMPLE_PERIOD_STD,
    GEOPM_NUM_SAMPLE_STATS
};
enum geopm_metric_stats_e {
    GEOPM_METRIC_COUNT,
    GEOPM_METRIC_FIRST,
    GEOPM_METRIC_LAST,
    GEOPM_METRIC_MIN,
    GEOPM_METRIC_MAX,
    GEOPM_METRIC_MEAN,
    GEOPM_METRIC_STD,
    GEOPM_NUM_METRIC_STATS
};
struct geopm_metric_stats_s {
    char name[GEOPM_NAME_MAX];
    double stats[GEOPM_NUM_METRIC_STATS];
};
struct geopm_report_s {
    char host[GEOPM_NAME_MAX];
    char sample_time_first[GEOPM_NAME_MAX];
    double sample_stats[GEOPM_NUM_SAMPLE_STATS];
    size_t num_metric;
    struct geopm_metric_stats_s *metric_stats;
};
/// @brief Create a stats collector handle
///
/// Provide a list of PlatformIO signal requests and construct a stats collector
/// object.  The request list determine which statistics will be included in the
/// generated report.
///
/// @param [in] num_requests Number of requests in array pointed to by the
///        request pointer
///
/// @param [in] requests Array of PlatformIO signal requests that configures the
///        report contents
///
/// @param [out] collector Handle to the constructed StatsCollector object, must
///        be de-allocated with geopm_stats_collector_free()
///
/// @returns 0 upon success, or error code upon failure
int GEOPM_PUBLIC
    geopm_stats_collector_create(size_t num_requests, const struct geopm_request_s *requests,
                                 struct geopm_stats_collector_s **collector);
/// @brief Update a stat collector with new values
///
/// User is expected to call PlatformIO::read_batch() prior to calling this
/// interface.  The sampled values will be used to update the report statistics.
///
/// @param [in] collector Handle created with a call to geopm_stats_collector_create()
///
/// @returns 0 upon success, or error code upon failure
int GEOPM_PUBLIC
    geopm_stats_collector_update(struct geopm_stats_collector_s *collector);
int GEOPM_PUBLIC
    geopm_stats_collector_report(const struct geopm_stats_collector_s *collector,
                                 size_t num_requests, struct geopm_report_s *report);
/// @brief Reset statistics
///
/// Called by user to zero all statistics gathered.  This may be called after a
/// call to geopm_stats_collector_report_yaml() and before the next call to
/// geopm_stats_collector_update() so that the next report that is generated is
/// independent of the last.
///
/// @param [in] collector Handle created with a call to geopm_stats_collector_create()
///
/// @returns 0 upon success, or error code upon failure
int GEOPM_PUBLIC
    geopm_stats_collector_reset(struct geopm_stats_collector_s *collector);
/// @brief Release resources associated with collector handle
///
/// @param [in] collector Handle created with a call to geopm_stats_collector_create()
///
/// @returns 0 upon success, or error code upon failure
int GEOPM_PUBLIC
    geopm_stats_collector_free(struct geopm_stats_collector_s *collector);